--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,8 +56,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set image tag (7-char SHA)
-        run: echo "TAG=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
+      - name: Set image tag 
+        run: echo "TAG=$GITHUB_SHA" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         run: |
